--- a/kenalan.html
+++ b/kenalan.html
@@ -8,7 +8,7 @@
     <title>BLM Fasilkom UPN "Veteran" Jawa Timur</title>
     <link rel="shortcut icon" href="/assets/icon/Logo-BLM-low.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/e7d3e74a3e.js" crossorigin="anonymous"></script>
 </head>
 
