--- a/kenalan.html
+++ b/kenalan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BLM Fasilkom UPN "Veteran" Jawa Timur</title>
-    <link rel="shortcut icon" href="/assets/icon/Logo-BLM-low.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icon/Logo-BLM-low.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/e7d3e74a3e.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar" id="navbar">
         <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo">
-            <img class="fluid" src="/assets/icon/Logo-BLM-low.png" alt="BLM FASILKOM">
+            <img class="fluid" src="./assets/icon/Logo-BLM-low.png" alt="BLM FASILKOM">
             <p class="navbar_logo_text">BLM FASILKOM</p>
         </a>
         <div class="navbar_burger">
@@ -24,16 +24,16 @@
             <div class="line3"></div>
         </div>
         <ul class="navbar_nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="kenalan.html">Kenalan Yuk!</a></li>
-            <li><a href="produk.html">Produk Hukum</a></li>
-            <li><a href="aspirasi.html">Aspirasi mahasiswa</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a class="active" href="./kenalan.html">Kenalan Yuk!</a></li>
+            <li><a href="./produk.html">Produk Hukum</a></li>
+            <li><a href="./aspirasi.html">Aspirasi mahasiswa</a></li>
 
         </ul>
     </nav>
     <!-- todo -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
