--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 
 <body>
     <nav class="navbar" id="navbar">
-        <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo">
-            <img class="fluid" src="./assets/icon/Logo-BLM-low.png" alt="BLM FASILKOM">
-            <p class="navbar_logo_text">BLM FASILKOM</p>
-        </a>
+        <div class="navbar_logo">
+            <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo_img">
+                <img class="fluid" src="./assets/icon/Logo-BLM-low.png" alt="BLM FASILKOM">
+            </a>
+            <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo_text">
+                <p>BLM FASILKOM</p>
+                <p>UPN "Veteran" Jatim</p>
+            </a>
+        </div>
         <div class="navbar_burger">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -28,10 +33,26 @@
             <li><a href="./kenalan.html">Kenalan Yuk!</a></li>
             <li><a href="./produk.html">Produk Hukum</a></li>
             <li><a href="./aspirasi.html">Aspirasi mahasiswa</a></li>
-
         </ul>
+        <div class="navbar_bar">
+            <div class="navbar_bar_dot">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <i class="navbar_bar_tombol "></i>
+            <i class="navbar_bar_tombol "></i>
+        </div>
     </nav>
     <!-- todo -->
+
+    <footer class="footer">
+        <p class="footer_copyright">Copyright © Afumoons 2020.</p>
+        <div class="footer_contact">
+            <a href="https://www.instagram.com/afumoons/"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/6287742212442"><i class="fab fa-whatsapp"></i></a>
+        </div>
+    </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
 </body>
