--- a/produk.html
+++ b/produk.html
@@ -14,10 +14,15 @@
 
 <body>
     <nav class="navbar" id="navbar">
-        <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo">
-            <img class="fluid" src="./assets/icon/Logo-BLM-low.png" alt="BLM FASILKOM">
-            <p class="navbar_logo_text">BLM FASILKOM</p>
-        </a>
+        <div class="navbar_logo">
+            <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo_img">
+                <img class="fluid" src="./assets/icon/Logo-BLM-low.png" alt="BLM FASILKOM">
+            </a>
+            <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo_text">
+                <p>BLM FASILKOM</p>
+                <p>UPN "Veteran" Jatim</p>
+            </a>
+        </div>
         <div class="navbar_burger">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -28,8 +33,16 @@
             <li><a href="./kenalan.html">Kenalan Yuk!</a></li>
             <li><a class="active" href="./produk.html">Produk Hukum</a></li>
             <li><a href="./aspirasi.html">Aspirasi mahasiswa</a></li>
-
         </ul>
+        <div class="navbar_bar">
+            <div class="navbar_bar_dot">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            <i class="navbar_bar_tombol "></i>
+            <i class="navbar_bar_tombol "></i>
+        </div>
     </nav>
     <div class="container-produk">
         <h3 class="container-produk_text">Produk Hukum</h3>
@@ -45,7 +58,7 @@
             <div class="container-produk_section" data-aos="fade-right">
                 <div class="container-produk_section_kotak">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=1wjmBvOpZ41I0oeQ23WAM-PF0fyobrHO_#list"
-                        width="400" height="300" frameborder="0"></iframe>
+                        width="350" height="400" frameborder="0"></iframe>
                 </div>
                 <p class="container-produk_section_text">Undang-undang Keluarga Mahasiswa FASILKOM UPN "Veteran" Jawa
                     Timur.</p>
@@ -53,13 +66,21 @@
             <div class="container-produk_section" data-aos="fade-left">
                 <div class="container-produk_section_kotak">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=1sLUwIwNTTVGbBarWBATMf1PYQ4oB3Cs6#list"
-                        width="400" height="300" frameborder="0"></iframe>
+                        width="350" height="400" frameborder="0"></iframe>
                 </div>
                 <p class="container-produk_section_text">Ketetapan Badan Eksekutif Mahasiswa FASILKOM UPN "Veteran" Jawa
                     Timur</p>
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <p class="footer_copyright">Copyright © Afumoons 2020.</p>
+        <div class="footer_contact">
+            <a href="https://www.instagram.com/afumoons/"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/6287742212442"><i class="fab fa-whatsapp"></i></a>
+        </div>
+    </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
 </body>
