--- a/produk.html
+++ b/produk.html
@@ -55,7 +55,7 @@
                 UPN "Veteran" Jawa Timur.</p>
         </div>
         <div class="container-row">
-            <div class="container-produk_section" data-aos="fade-right">
+            <div class="container-produk_section" data-aos="fade-down">
                 <div class="container-produk_section_kotak">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=1wjmBvOpZ41I0oeQ23WAM-PF0fyobrHO_#list"
                         width="350" height="400" frameborder="0"></iframe>
@@ -63,7 +63,7 @@
                 <p class="container-produk_section_text">Undang-undang Keluarga Mahasiswa FASILKOM UPN "Veteran" Jawa
                     Timur.</p>
             </div>
-            <div class="container-produk_section" data-aos="fade-left">
+            <div class="container-produk_section" data-aos="fade-down">
                 <div class="container-produk_section_kotak">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=1sLUwIwNTTVGbBarWBATMf1PYQ4oB3Cs6#list"
                         width="350" height="400" frameborder="0"></iframe>
