--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             <i class="navbar_bar_tombol "></i>
         </div>
     </nav>
-    <!-- todo -->
+
+    <div class="container-home">
+
+    </div>
 
     <footer class="footer">
         <p class="footer_copyright">Copyright © Afumoons 2020.</p>
@@ -53,6 +56,7 @@
             <a href="https://wa.me/6287742212442"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
 </body>
