--- a/kenalan.html
+++ b/kenalan.html
@@ -44,7 +44,44 @@
             <i class="navbar_bar_tombol "></i>
         </div>
     </nav>
-    <!-- todo -->
+
+    <div class="container-kenalan">
+        <div class="glide">
+            <div class="glide__track" data-glide-el="track">
+                <ul class="glide__slides">
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-BLM.jpeg" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/Waka-BLM.jpeg" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Pengawasan.jpeg" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Pengawasan.jpeg" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Legislasi.jpeg" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Legislasi.jpeg" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Anggaran.jpeg" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Anggaran.jpeg" alt=""></li>
+
+
+                </ul>
+            </div>
+            <div class="glide__arrows" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i
+                        class="fas fa-chevron-circle-left"></i></button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i
+                        class="fas fa-chevron-circle-right"></i></button>
+            </div>
+        </div>
+        <div class="container-kenalan_text-jumbo">
+            <div class="container-kenalan_text-jumbo_judul">
+                <p>Apa itu BLM <i class="fas fa-apakah"></i></p>
+
+            </div>
+            <div class="container-kenalan_text-jumbo_text">
+                <p>Kekuasaan Legislatif Organisasi mahasiswa tingkat Fakultas Ilmu Komputer diberikan kepada suatu badan
+                    yang bernama Badan Legislatif Mahasiswa Fakultas Ilmu Komputer UPN “Veteran” Jawa Timur sebagai
+                    perwujudan seluruh mahasiswa FASILKOM UPN “Veteran”
+                    Jawa Timur.</p>
+            </div>
+            <div class="container-kenalan_text-jumbo_background"></div>
+        </div>
+    </div>
 
     <footer class="footer">
         <p class="footer_copyright">Copyright © Afumoons 2020.</p>
@@ -53,6 +90,7 @@
             <a href="https://wa.me/6287742212442"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
 </body>
