--- a/aspirasi.html
+++ b/aspirasi.html
@@ -61,8 +61,8 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="./js/glide.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
