--- a/kenalan.html
+++ b/kenalan.html
@@ -90,8 +90,8 @@
             <a href="https://wa.me/6287742212442"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="./js/glide.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
