--- a/aspirasi.html
+++ b/aspirasi.html
@@ -44,6 +44,7 @@
             <i class="navbar_bar_tombol "></i>
         </div>
     </nav>
+
     <div class="container-aspirasi">
         <h3 class="container-aspirasi_text" data-aos="slide-right">Form Aspirasi KM FASILKOM</h3>
         <div class="container-aspirasi_iframe">
@@ -56,8 +57,11 @@
     <footer class="footer">
         <p class="footer_copyright">Copyright © Afumoons 2020.</p>
         <div class="footer_contact">
-            <a href="https://www.instagram.com/afumoons/"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:blmfasilkom.upnvjt@gmail.com?subject=Aspirasi KM Fasilkom"><i
+                    class="far fa-envelope"></i></a>
             <a href="https://wa.me/6287742212442"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/blmfasilkom.upnvjt/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/blm-fasilkom-upnvjt"><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
 
