--- a/kenalan.html
+++ b/kenalan.html
@@ -57,8 +57,6 @@
                     <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Legislasi.jpeg" alt=""></li>
                     <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Anggaran.jpeg" alt=""></li>
                     <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Anggaran.jpeg" alt=""></li>
-
-
                 </ul>
             </div>
             <div class="glide__arrows" data-glide-el="controls">
@@ -74,10 +72,13 @@
 
             </div>
             <div class="container-kenalan_text-jumbo_text">
-                <p>Kekuasaan Legislatif Organisasi mahasiswa tingkat Fakultas Ilmu Komputer diberikan kepada suatu badan
-                    yang bernama Badan Legislatif Mahasiswa Fakultas Ilmu Komputer UPN “Veteran” Jawa Timur sebagai
-                    perwujudan seluruh mahasiswa FASILKOM UPN “Veteran”
-                    Jawa Timur.</p>
+                <p>BLM (Badan Legislatif Mahasiswa) Fakultas Ilmu Komputer UPN Veteran Jawa Timur adalah organisasi
+                    legislatif yang berfungsi untuk menerima dan menyalurkan aspirasi dari seluruh Fasilkom UPN Veteran
+                    Jawa Timur mengenai badan-badan organisasi, memantau kegiatan-kegiatan badan organisasi di dalam
+                    Fasilkom UPN Veteran Jawa Timur, sebagai serta untuk membawa mahasiswa baru ke dalam kehidupan
+                    universitas. Semua itu ditujukan untuk peningkatan kualitas pendidikan dan non-pendidikan yang
+                    berkelanjutan, yang harus mengarah pada peningkatan kapasitas dan karakter. Akhirnya, kami berusaha
+                    keras untuk mencapainya dengan memanfaatkan teknologi informasi canggih.</p>
             </div>
             <div class="container-kenalan_text-jumbo_background"></div>
         </div>
@@ -86,10 +87,14 @@
     <footer class="footer">
         <p class="footer_copyright">Copyright © Afumoons 2020.</p>
         <div class="footer_contact">
-            <a href="https://www.instagram.com/afumoons/"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:blmfasilkom.upnvjt@gmail.com?subject=Aspirasi KM Fasilkom"><i
+                    class="far fa-envelope"></i></a>
             <a href="https://wa.me/6287742212442"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/blmfasilkom.upnvjt/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/blm-fasilkom-upnvjt"><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
