--- a/index.html
+++ b/index.html
@@ -52,10 +52,14 @@
     <footer class="footer">
         <p class="footer_copyright">Copyright © Afumoons 2020.</p>
         <div class="footer_contact">
-            <a href="https://www.instagram.com/afumoons/"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:blmfasilkom.upnvjt@gmail.com?subject=Aspirasi KM Fasilkom"><i
+                    class="far fa-envelope"></i></a>
             <a href="https://wa.me/6287742212442"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/blmfasilkom.upnvjt/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/blm-fasilkom-upnvjt"><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
