--- a/produk.html
+++ b/produk.html
@@ -51,8 +51,7 @@
                 <iframe src="https://drive.google.com/embeddedfolderview?id=1rhlZuWT4SKLVHYJsywc8bKzOuNaeN7P7#grid"
                     width="300" height="300" frameborder="0"></iframe>
             </div>
-            <p class="container-produk_section_text">Anggaran Dasar / Anggaran Rumah Tangga Keluarga Mahasiswa FASILKOM
-                UPN "Veteran" Jawa Timur.</p>
+            <p class="container-produk_section_text">Anggaran Dasar / Anggaran Rumah Tangga .</p>
         </div>
         <div class="container-row">
             <div class="container-produk_section" data-aos="fade-down">
@@ -60,22 +59,24 @@
                     <iframe src="https://drive.google.com/embeddedfolderview?id=1wjmBvOpZ41I0oeQ23WAM-PF0fyobrHO_#list"
                         width="350" height="400" frameborder="0"></iframe>
                 </div>
-                <p class="container-produk_section_text">Undang-undang Keluarga Mahasiswa FASILKOM UPN "Veteran" Jawa
-                    Timur.</p>
+                <p class="container-produk_section_text">Undang-undang.</p>
             </div>
             <div class="container-produk_section" data-aos="fade-down">
                 <div class="container-produk_section_kotak">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=1sLUwIwNTTVGbBarWBATMf1PYQ4oB3Cs6#list"
                         width="350" height="400" frameborder="0"></iframe>
                 </div>
-                <p class="container-produk_section_text">Ketetapan Badan Eksekutif Mahasiswa FASILKOM UPN "Veteran" Jawa
-                    Timur</p>
+                <p class="container-produk_section_text">Ketetapan Badan Eksekutif Mahasiswa.</p>
             </div>
         </div>
     </div>
 
     <footer class="footer">
-        <p class="footer_copyright">Copyright © Afumoons 2020.</p>
+        <p class="footer_copyright">
+            Copyright <a href="https://github.com/Afumoons/Afumoons.github.io">
+                © Afumoons
+            </a> 2020.
+        </p>
         <div class="footer_contact">
             <a href="mailto:blmfasilkom.upnvjt@gmail.com?subject=Aspirasi KM Fasilkom"><i
                     class="far fa-envelope"></i></a>
