--- a/aspirasi.html
+++ b/aspirasi.html
@@ -15,10 +15,10 @@
 <body>
     <nav class="navbar" id="navbar">
         <div class="navbar_logo">
-            <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo_img">
+            <a href="https://www.instagram.com/blmfasilkom.upnvjt/" class="navbar_logo_img">
                 <img class="fluid" src="./assets/icon/Logo-BLM-low.png" alt="BLM FASILKOM">
             </a>
-            <a href="https://github.com/Afumoons/Afumoons.github.io" class="navbar_logo_text">
+            <a href="https://www.instagram.com/blmfasilkom.upnvjt/" class="navbar_logo_text">
                 <p>BLM FASILKOM</p>
                 <p>UPN "Veteran" Jatim</p>
             </a>
@@ -55,7 +55,11 @@
     </div>
 
     <footer class="footer">
-        <p class="footer_copyright">Copyright © Afumoons 2020.</p>
+        <p class="footer_copyright">
+            Copyright <a href="https://github.com/Afumoons/Afumoons.github.io">
+                © Afumoons
+            </a> 2020.
+        </p>
         <div class="footer_contact">
             <a href="mailto:blmfasilkom.upnvjt@gmail.com?subject=Aspirasi KM Fasilkom"><i
                     class="far fa-envelope"></i></a>
