--- a/kenalan.html
+++ b/kenalan.html
@@ -60,18 +60,20 @@
                 </ul>
             </div>
             <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i
-                        class="fas fa-chevron-circle-left"></i></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i
-                        class="fas fa-chevron-circle-right"></i></button>
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                    <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                    <i class="fas fa-chevron-right"></i>
+                </button>
             </div>
         </div>
-        <div class="container-kenalan_text-jumbo">
-            <div class="container-kenalan_text-jumbo_judul">
+        <div class="text-jumbo">
+            <div class="text-jumbo_judul">
                 <p>Apa itu BLM <i class="fas fa-apakah"></i></p>
 
             </div>
-            <div class="container-kenalan_text-jumbo_text">
+            <div class="text-jumbo_text">
                 <p>BLM (Badan Legislatif Mahasiswa) Fakultas Ilmu Komputer UPN Veteran Jawa Timur adalah organisasi
                     legislatif yang berfungsi untuk menerima dan menyalurkan aspirasi dari seluruh Fasilkom UPN Veteran
                     Jawa Timur mengenai badan-badan organisasi, memantau kegiatan-kegiatan badan organisasi di dalam
@@ -80,7 +82,7 @@
                     berkelanjutan, yang harus mengarah pada peningkatan kapasitas dan karakter. Akhirnya, kami berusaha
                     keras untuk mencapainya dengan memanfaatkan teknologi informasi canggih.</p>
             </div>
-            <div class="container-kenalan_text-jumbo_background"></div>
+            <div class="text-jumbo_background"></div>
         </div>
     </div>
 
