--- a/index.html
+++ b/index.html
@@ -46,32 +46,31 @@
     </nav>
 
     <div class="container-home">
-        <div class="glide">
+        <!-- <div class="glide">
             <div class="glide__track" data-glide-el="track">
+                <div id="overlay"></div>
                 <ul class="glide__slides">
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-BLM.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Waka-BLM.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Pengawasan.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Pengawasan.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Legislasi.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Legislasi.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Anggaran.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Anggaran.jpeg" alt=""></li>
+                    <li class="glide__slide" data-glide-autoplay="6000">
+                        <div class="text-picture fluid">1</div>
+                        <img class="fluid" src="./assets/img/IMG_1893.jpg" alt="">
+                    </li>
+                    <li class="glide__slide">
+                        <div class="text-picture fluid">2</div>
+                        <img class="fluid" src="./assets/img/IMG_9915.jpg" alt="">
+                    </li>
+                    <li class="glide__slide">
+                        <div class="text-picture fluid">3</div>
+                        <img class="fluid" src="./assets/img/IMG_9962.jpg" alt="">
+                    </li>
                 </ul>
             </div>
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i
-                        class="fas fa-chevron-circle-left"></i></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i
-                        class="fas fa-chevron-circle-right"></i></button>
-            </div>
-        </div>
-        <div class="container-kenalan_text-jumbo">
-            <div class="container-kenalan_text-jumbo_judul">
+        </div> -->
+        <div class="text-jumbo">
+            <div class="text-jumbo_judul">
                 <p>Apa itu BLM <i class="fas fa-apakah"></i></p>
 
             </div>
-            <div class="container-kenalan_text-jumbo_text">
+            <div class="text-jumbo_text">
                 <p>BLM (Badan Legislatif Mahasiswa) Fakultas Ilmu Komputer UPN Veteran Jawa Timur adalah organisasi
                     legislatif yang berfungsi untuk menerima dan menyalurkan aspirasi dari seluruh Fasilkom UPN Veteran
                     Jawa Timur mengenai badan-badan organisasi, memantau kegiatan-kegiatan badan organisasi di dalam
@@ -80,7 +79,7 @@
                     berkelanjutan, yang harus mengarah pada peningkatan kapasitas dan karakter. Akhirnya, kami berusaha
                     keras untuk mencapainya dengan memanfaatkan teknologi informasi canggih.</p>
             </div>
-            <div class="container-kenalan_text-jumbo_background"></div>
+            <div class="text-jumbo_background"></div>
         </div>
     </div>
 
