--- a/kenalan.html
+++ b/kenalan.html
@@ -88,8 +88,8 @@
 
     <footer class="footer">
         <p class="footer_copyright">
-            Copyright <a href="https://github.com/Afumoons/Afumoons.github.io">
-                © Afumoons
+            Copyright <a href="https://github.com/blmfasilkomupnjatim">
+                © BLM Fasilkom
             </a> 2020.
         </p>
         <div class="footer_contact">
