--- a/index.html
+++ b/index.html
@@ -45,48 +45,31 @@
         </div>
     </nav>
 
+    <header class="picture-header">
+        <div id="overlay"></div>
+        <div class="picture-header_text">
+            <h1 data-aos="fade-left" data-aos-delay="1000">Web BLM Fasilkom</h1>
+            <h2 class="fancy">UPN "Veteran" Jawa Timur</h2>
+        </div>
+    </header>
     <div class="container-home">
-        <!-- <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-                <div id="overlay"></div>
-                <ul class="glide__slides">
-                    <li class="glide__slide" data-glide-autoplay="6000">
-                        <div class="text-picture fluid">1</div>
-                        <img class="fluid" src="./assets/img/IMG_1893.jpg" alt="">
-                    </li>
-                    <li class="glide__slide">
-                        <div class="text-picture fluid">2</div>
-                        <img class="fluid" src="./assets/img/IMG_9915.jpg" alt="">
-                    </li>
-                    <li class="glide__slide">
-                        <div class="text-picture fluid">3</div>
-                        <img class="fluid" src="./assets/img/IMG_9962.jpg" alt="">
-                    </li>
-                </ul>
-            </div>
-        </div> -->
         <div class="text-jumbo">
             <div class="text-jumbo_judul">
-                <p>Apa itu BLM <i class="fas fa-apakah"></i></p>
+                <p>Website resmi BLM <i class="fas fa-apakah"></i></p>
 
             </div>
             <div class="text-jumbo_text">
-                <p>BLM (Badan Legislatif Mahasiswa) Fakultas Ilmu Komputer UPN Veteran Jawa Timur adalah organisasi
-                    legislatif yang berfungsi untuk menerima dan menyalurkan aspirasi dari seluruh Fasilkom UPN Veteran
-                    Jawa Timur mengenai badan-badan organisasi, memantau kegiatan-kegiatan badan organisasi di dalam
-                    Fasilkom UPN Veteran Jawa Timur, sebagai serta untuk membawa mahasiswa baru ke dalam kehidupan
-                    universitas. Semua itu ditujukan untuk peningkatan kualitas pendidikan dan non-pendidikan yang
-                    berkelanjutan, yang harus mengarah pada peningkatan kapasitas dan karakter. Akhirnya, kami berusaha
-                    keras untuk mencapainya dengan memanfaatkan teknologi informasi canggih.</p>
+                <p>Website resmi yang dibuat dengan cinta oleh Badan Legislatif Mahasiswa Fakultas Ilmu Komputer UPN
+                    "Veteran" Jawa Timur</p>
             </div>
-            <div class="text-jumbo_background"></div>
+            <div class="text-jumbo_background text-jumbo_background_kecil"></div>
         </div>
     </div>
 
     <footer class="footer">
         <p class="footer_copyright">
-            Copyright <a href="https://github.com/Afumoons/Afumoons.github.io">
-                © Afumoons
+            Copyright <a href="https://github.com/blmfasilkomupnjatim">
+                © BLM Fasilkom
             </a> 2020.
         </p>
         <div class="footer_contact">
@@ -101,9 +84,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/script.js"></script>
-    <script>
-        new Glide('.glide', configglide).mount();
-    </script>
 </body>
 
 </html>
