--- a/kenalan.html
+++ b/kenalan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BLM Fasilkom UPN "Veteran" Jawa Timur</title>
-    <link rel="shortcut icon" href="./assets/icon/Logo-BLM-low.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icon/Logo-BLM-low-web.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/e7d3e74a3e.js" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
     <nav class="navbar" id="navbar">
         <div class="navbar_logo">
             <a href="https://www.instagram.com/blmfasilkom.upnvjt/" class="navbar_logo_img">
-                <img class="fluid" src="./assets/icon/Logo-BLM-low.png" alt="BLM FASILKOM">
+                <img class="fluid" src="./assets/icon/Logo-BLM-low-nav.png" alt="BLM FASILKOM">
             </a>
             <a href="https://www.instagram.com/blmfasilkom.upnvjt/" class="navbar_logo_text">
                 <p>BLM FASILKOM</p>
@@ -49,14 +49,20 @@
         <div class="glide">
             <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-BLM.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Waka-BLM.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Pengawasan.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Pengawasan.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Legislasi.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Legislasi.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Ka-Anggaran.jpeg" alt=""></li>
-                    <li class="glide__slide"><img class="fluid" src="./assets/img/Angg-Anggaran.jpeg" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/webp/Ka-BLM_web.webp" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/webp/Waka-BLM_web.webp" alt=""></li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/webp/Ka-Pengawasan_web.webp" alt="">
+                    </li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/webp/Angg-Pengawasan_web.webp" alt="">
+                    </li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/webp/Ka-Legislasi_web.webp" alt="">
+                    </li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/webp/Angg-Legislasi_web.webp" alt="">
+                    </li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/webp/Ka-Anggaran_web.webp" alt="">
+                    </li>
+                    <li class="glide__slide"><img class="fluid" src="./assets/img/webp/Angg-Anggaran_web.webp" alt="">
+                    </li>
                 </ul>
             </div>
             <div class="glide__arrows" data-glide-el="controls">
