Meta Description + README.MD
Penambahan Meta Description pada setiap page
Update isi README.MD
Perbaikan kecil tampilan

--- a/kenalan.html
+++ b/kenalan.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Page Perkenalan Tentang BLM Website Official BLM Fasilkom UPN Veteran Jawa Timur">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BLM Fasilkom UPN "Veteran" Jawa Timur</title>
     <link rel="shortcut icon" href="./assets/icon/Logo-BLM-low-web.png" type="image/x-icon">
