--- a/index.html
+++ b/index.html
@@ -49,19 +49,20 @@
     <header class="picture-header">
         <div id="overlay"></div>
         <div class="picture-header_text">
-            <h1 data-aos="fade-left" data-aos-delay="1000">Web BLM Fasilkom</h1>
+            <h1 data-aos="fade-left" data-aos-delay="1000">Official Website BLM Fakultas Ilmu Komputer</h1>
             <h2 class="fancy">UPN "Veteran" Jawa Timur</h2>
         </div>
     </header>
     <div class="container-home">
         <div class="text-jumbo">
             <div class="text-jumbo_judul">
-                <p>Website resmi BLM <i class="fas fa-apakah"></i></p>
+                <p>Official Website BLM <i class="fas fa-apakah"></i></p>
 
             </div>
             <div class="text-jumbo_text">
                 <p>Website resmi yang dibuat dengan cinta oleh Badan Legislatif Mahasiswa Fakultas Ilmu Komputer UPN
-                    "Veteran" Jawa Timur</p>
+                    "Veteran" Jawa Timur. Bertujuan untuk mempermudah KM FASILKOM mengakses perihal informasi AD/ART,
+                  Undang-undang, dan Ketetapan BEM FASILKOM.</p>
             </div>
             <div class="text-jumbo_background text-jumbo_background_kecil"></div>
         </div>
