--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <nav class="navbar" id="navbar">
         <div class="navbar_logo">
-            <a href="https://www.instagram.com/blmfasilkom.upnvjt/" class="navbar_logo_img">
+            <a href="./index.html" class="navbar_logo_img">
                 <img class="fluid" src="./assets/icon/Logo-BLM-low-nav.png" alt="BLM FASILKOM">
             </a>
-            <a href="https://www.instagram.com/blmfasilkom.upnvjt/" class="navbar_logo_text">
+            <a href="./index.html" class="navbar_logo_text">
                 <p>BLM FASILKOM</p>
                 <p>UPN "Veteran" Jatim</p>
             </a>
@@ -49,8 +49,10 @@
     <header class="picture-header">
         <div id="overlay"></div>
         <div class="picture-header_text">
-            <h1 data-aos="fade-left" data-aos-delay="1000">Official Website BLM Fakultas Ilmu Komputer</h1>
-            <h2 class="fancy">UPN "Veteran" Jawa Timur</h2>
+            <h1>Official Website BLM Fakultas Ilmu Komputer UPN "Veteran" Jawa Timur</h1>
+            <p class="h1" data-aos="fade-left" data-aos-delay="1000">Official Website BLM</p>
+            <p class="h2" data-aos="fade-left" data-aos-delay="1500">Fakultas Ilmu Komputer</p>
+            <p class="fancy">UPN "Veteran" Jawa Timur</p>
         </div>
     </header>
     <div class="container-home">
@@ -62,7 +64,7 @@
             <div class="text-jumbo_text">
                 <p>Website resmi yang dibuat dengan cinta oleh Badan Legislatif Mahasiswa Fakultas Ilmu Komputer UPN
                     "Veteran" Jawa Timur. Bertujuan untuk mempermudah KM FASILKOM mengakses perihal informasi AD/ART,
-                  Undang-undang, dan Ketetapan BEM FASILKOM.</p>
+                    Undang-undang, dan Ketetapan BEM FASILKOM.</p>
             </div>
             <div class="text-jumbo_background text-jumbo_background_kecil"></div>
         </div>
