--- a/produk.html
+++ b/produk.html
@@ -17,10 +17,10 @@
 <body>
     <nav class="navbar" id="navbar">
         <div class="navbar_logo">
-            <a href="https://www.instagram.com/blmfasilkom.upnvjt/" class="navbar_logo_img">
+            <a href="./index.html" class="navbar_logo_img">
                 <img class="fluid" src="./assets/icon/Logo-BLM-low-nav.png" alt="BLM FASILKOM">
             </a>
-            <a href="https://www.instagram.com/blmfasilkom.upnvjt/" class="navbar_logo_text">
+            <a href="./index.html" class="navbar_logo_text">
                 <p>BLM FASILKOM</p>
                 <p>UPN "Veteran" Jatim</p>
             </a>
