--- a/kenalan.html
+++ b/kenalan.html
@@ -78,7 +78,6 @@
         <div class="text-jumbo" data-aos="zoom-in" data-aos-delay="1000">
             <div class="text-jumbo_judul">
                 <p>Apa itu BLM <i class="fas fa-apakah"></i></p>
-
             </div>
             <div class="text-jumbo_text">
                 <p>BLM (Badan Legislatif Mahasiswa) Fakultas Ilmu Komputer UPN Veteran Jawa Timur adalah organisasi
@@ -91,6 +90,7 @@
             </div>
             <div class="text-jumbo_background"></div>
         </div>
+        <img src="./assets/img/webp/Struktur_web.webp" alt="struktur organisasi" class="fluid" data-aos="slide-right">
     </div>
 
     <footer class="footer">
